Adjusting endpoint swagger's examples